--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Open Sans Condensed", sans-serif; }
+  font-family: "Open Sans Condensed", sans-serif;
+  padding: 20px 60px; }
 
 html {
   font-size: 10px; }
@@ -65,8 +66,42 @@ html {
   flex-wrap: wrap;
   justify-content: space-between; }
 
+.collection-preview {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px; }
+  .collection-preview .title {
+    font-size: 28px;
+    margin-bottom: 25px; }
+  .collection-preview .preview {
+    display: flex;
+    justify-content: space-between; }
+
+.collection-item {
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  align-items: center; }
+  .collection-item .image {
+    width: 100%;
+    height: 95%;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 5px; }
+  .collection-item .collection-footer {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px; }
+    .collection-item .collection-footer .name {
+      width: 90%;
+      margin-bottom: 15px; }
+    .collection-item .collection-footer .price {
+      width: 10%; }
+
 .homepage {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px 80px; }
+  align-items: center; }
