--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/directory.scss";
 @import "./components/previewCollection.scss";
 @import "./components/collectionItem.scss";
+@import "./components/header.scss";
 
 //Pages
 @import "./pages/homepage";
