--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,10 @@
+//abstracts
+// abstracts-variables
+@import "./abstracts/variables.scss";
+
+// abstracts-mixins
+@import "./abstracts/mixins";
+
 //Base
 @import "./base/base";
 
@@ -7,7 +14,10 @@
 @import "./components/previewCollection.scss";
 @import "./components/collectionItem.scss";
 @import "./components/header.scss";
+@import "./components/form-input.scss";
+@import "./components/button.scss";
 
 //Pages
 @import "./pages/homepage";
 @import "./pages/shop";
+@import "./pages/sign-in-and-sign-up.scss";
