--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,17 +1,14 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   font-family: "Open Sans Condensed", sans-serif;
-  padding: 2rem 4rem;
-}
+  padding: 2rem 4rem; }
 
 html {
-  font-size: 10px;
-}
+  font-size: 10px; }
 
 .menu-item {
   min-width: 30%;
@@ -24,175 +21,145 @@ html {
   margin: 0 7.5px 15px;
   overflow: hidden;
   background-position: center;
-  background-size: cover;
-}
-.menu-item:hover {
-  cursor: pointer;
-}
-.menu-item:hover .background-image {
-  transform: scale(1.1);
-  transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-}
-.menu-item:hover .content {
-  opacity: 0.9;
-}
-.menu-item.large {
-  height: 380px;
-}
-.menu-item:first-child {
-  margin-right: 7.5px;
-}
-.menu-item:last-child {
-  margin-left: 7.5px;
-}
-.menu-item .background-image {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-}
-.menu-item .content {
-  height: 90px;
-  padding: 0 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background-color: white;
-  opacity: 0.7;
-  position: absolute;
-}
-.menu-item .content .title {
-  font-weight: bold;
-  margin: 0 6px 0;
-  font-size: 22px;
-  color: #4a4a4a;
-}
-.menu-item .content .subtitle {
-  font-weight: lighter;
-  font-size: 16px;
-}
+  background-size: cover; }
+  .menu-item:hover {
+    cursor: pointer; }
+    .menu-item:hover .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95); }
+    .menu-item:hover .content {
+      opacity: 0.9; }
+  .menu-item.large {
+    height: 380px; }
+  .menu-item:first-child {
+    margin-right: 7.5px; }
+  .menu-item:last-child {
+    margin-left: 7.5px; }
+  .menu-item .background-image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center; }
+  .menu-item .content {
+    height: 90px;
+    padding: 0 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    position: absolute; }
+    .menu-item .content .title {
+      font-weight: bold;
+      margin: 0 6px 0;
+      font-size: 22px;
+      color: #4a4a4a; }
+    .menu-item .content .subtitle {
+      font-weight: lighter;
+      font-size: 16px; }
 
 .directory-menu {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 .collection-preview {
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
-}
-.collection-preview .title {
-  font-size: 28px;
-  margin-bottom: 25px;
-}
-.collection-preview .preview {
-  display: flex;
-  justify-content: space-between;
-}
+  margin-bottom: 30px; }
+  .collection-preview .title {
+    font-size: 28px;
+    margin-bottom: 25px; }
+  .collection-preview .preview {
+    display: flex;
+    justify-content: space-between; }
 
 .collection-item {
   width: 22%;
   display: flex;
   flex-direction: column;
   height: 350px;
-  align-items: center;
-}
-.collection-item .image {
-  width: 100%;
-  height: 95%;
-  background-size: cover;
-  background-position: center;
-  margin-bottom: 5px;
-}
-.collection-item .collection-footer {
-  width: 100%;
-  height: 5%;
-  display: flex;
-  justify-content: space-between;
-  font-size: 18px;
-}
-.collection-item .collection-footer .name {
-  width: 90%;
-  margin-bottom: 15px;
-}
-.collection-item .collection-footer .price {
-  width: 10%;
-}
+  align-items: center; }
+  .collection-item .image {
+    width: 100%;
+    height: 95%;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 5px; }
+  .collection-item .collection-footer {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px; }
+    .collection-item .collection-footer .name {
+      width: 90%;
+      margin-bottom: 15px; }
+    .collection-item .collection-footer .price {
+      width: 10%; }
 
 .header {
   height: 70px;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 25px;
-}
-.header .logo-container {
-  height: 100%;
-  width: 70px;
-  padding: 25px;
-}
-.header .options {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.header .options .option {
-  padding: 10px 15px;
-  font-size: 1.5rem;
-  text-decoration: none;
-  color: black;
-}
+  margin-bottom: 25px; }
+  .header .logo-container {
+    height: 100%;
+    width: 70px;
+    padding: 25px; }
+  .header .options {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; }
+    .header .options .option {
+      cursor: pointer;
+      padding: 10px 15px;
+      font-size: 1.5rem;
+      text-decoration: none;
+      color: black; }
 
 .group {
   position: relative;
-  margin: 45px 0;
-}
-.group .form-input {
-  background: none;
-  background-color: white;
-  color: grey;
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 100%;
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid grey;
-  margin: 25px 0;
-}
-.group .form-input:focus {
-  outline: none;
-}
-.group .form-input:focus ~ .form-input-label {
-  top: -14px;
-  font-size: 12px;
-  color: black;
-}
-.group input[type="password"] {
-  letter-spacing: 0.3em;
-}
-.group .form-input-label {
-  color: grey;
-  font-size: 16px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 300ms ease all;
-}
-.group .form-input-label.shrink {
-  top: -14px;
-  font-size: 12px;
-  color: black;
-}
+  margin: 45px 0; }
+  .group .form-input {
+    background: none;
+    background-color: white;
+    color: grey;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid grey;
+    margin: 25px 0; }
+    .group .form-input:focus {
+      outline: none; }
+    .group .form-input:focus ~ .form-input-label {
+      top: -14px;
+      font-size: 12px;
+      color: black; }
+  .group input[type="password"] {
+    letter-spacing: 0.3em; }
+  .group .form-input-label {
+    color: grey;
+    font-size: 16px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 300ms ease all; }
+    .group .form-input-label.shrink {
+      top: -14px;
+      font-size: 12px;
+      color: black; }
 
 .custom-button {
   min-width: 165px;
@@ -208,29 +175,30 @@ html {
   font-family: "Open Sans Condensed";
   font-weight: bolder;
   border: none;
-  cursor: pointer;
-}
-.custom-button:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-}
+  cursor: pointer; }
+  .custom-button:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black; }
+  .custom-button.google-sign-in {
+    background-color: #4285f4;
+    color: #fff; }
+    .custom-button.google-sign-in:hover {
+      background-color: #357ae8;
+      border: none; }
 
 .homepage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 6rem;
-}
+  padding: 1rem 6rem; }
 
 .shop-page {
-  padding: 1rem 6rem;
-}
+  padding: 1rem 6rem; }
 
 .sign-in-and-sign-up {
   padding: 1rem 6rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
