--- a/src/sass/components/sign-in.scss
+++ b/src/sass/components/sign-in.scss
@@ -1,3 +1,9 @@
 .sign-in {
-  width: 30vw;
+  width: 35vw;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
