--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./components/header.scss";
 @import "./components/form-input.scss";
 @import "./components/button.scss";
+@import "./components/signup.scss";
 
 //Pages
 @import "./pages/homepage";
