Added cart to shop

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import "./components/form-input.scss";
 @import "./components/button.scss";
 @import "./components/signup.scss";
+@import "./components/cartDropDown.scss";
 
 //Pages
 @import "./pages/homepage";
