--- a/src/css/index.css
+++ b/src/css/index.css
@@ -82,7 +82,8 @@ html {
   display: flex;
   flex-direction: column;
   height: 350px;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
   .collection-item .image {
     width: 100%;
     height: 95%;
@@ -100,6 +101,14 @@ html {
       margin-bottom: 15px; }
     .collection-item .collection-footer .price {
       width: 10%; }
+  .collection-item .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    display: none; }
+  .collection-item:hover .custom-button {
+    display: block; }
 
 .header {
   height: 70px;
@@ -123,6 +132,8 @@ html {
       font-size: 1.5rem;
       text-decoration: none;
       color: black; }
+  .header .cart-icon {
+    cursor: pointer; }
 
 .group {
   position: relative;
@@ -175,7 +186,9 @@ html {
   font-family: "Open Sans Condensed";
   font-weight: bolder;
   border: none;
-  cursor: pointer; }
+  cursor: pointer;
+  display: flex;
+  justify-content: center; }
   .custom-button:hover {
     background-color: white;
     color: black;
@@ -186,6 +199,14 @@ html {
     .custom-button.google-sign-in:hover {
       background-color: #357ae8;
       border: none; }
+  .custom-button.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black; }
+    .custom-button.inverted:hover {
+      background-color: black;
+      color: white;
+      border: none; }
 
 .sign-up {
   display: flex;
@@ -193,6 +214,26 @@ html {
   width: 480px; }
   .sign-up .title {
     margin: 10px 0; }
+
+.cart-dropdown {
+  position: absolute;
+  width: 240px;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 1px solid black;
+  background-color: white;
+  top: 90px;
+  right: 40px;
+  z-index: 5; }
+  .cart-dropdown .cart-items {
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll; }
+  .cart-dropdown button {
+    margin-top: auto; }
 
 .homepage {
   display: flex;
