--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,8 +18,11 @@
 @import "./components/button.scss";
 @import "./components/signup.scss";
 @import "./components/cartDropDown.scss";
+@import "./components/cartItem.scss";
+@import "./components/cartPageItems.scss";
 
 //Pages
 @import "./pages/homepage";
 @import "./pages/shop";
 @import "./pages/sign-in-and-sign-up.scss";
+@import "./pages/Cart.scss";
