--- a/src/sass/components/cartDropDown.scss
+++ b/src/sass/components/cartDropDown.scss
@@ -4,6 +4,7 @@
   height: 340px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 20px;
   border: 1px solid black;
   background-color: white;
@@ -15,7 +16,12 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
+  }
+
+  .empty-message {
+    font-size: 15px;
+    margin: 50px auto;
   }
 
   button {
